# ndjson_manip

./: .gitignore  README.md  pyproject.toml  repack.py  unpack.py
ndjson_manip/: json_ops.py  repack.py  unpack.py
tests/: export-flights.ndjson  test_cli.py
tests/export-flights/: 01c413e0-5395-11e8-99bf-1ba7b1bdaa61.json  01c413e0-5395-11e8-99bf-1ba7b1bdaa61_attributes.visState.json  08884800-52fe-11e8-a160-89cc2ad9e8e2.json  08884800-52fe-11e8-a160-89cc2ad9e8e2_attributes.kibanaSavedObjectMeta.searchSourceJSON.json  08884800-52fe-11e8-a160-89cc2ad9e8e2_attributes.visState.json  129be430-4c93-11e8-b3d7-01146121b73d.json  129be430-4c93-11e8-b3d7-01146121b73d_attributes.visState.json  293b5a30-4c8f-11e8-b3d7-01146121b73d.json  293b5a30-4c8f-11e8-b3d7-01146121b73d_attributes.visState.json  2edf78b0-5395-11e8-99bf-1ba7b1bdaa61.json  2edf78b0-5395-11e8-99bf-1ba7b1bdaa61_attributes.visState.json  334084f0-52fd-11e8-a160-89cc2ad9e8e2.json  334084f0-52fd-11e8-a160-89cc2ad9e8e2_attributes.visState.json  571aaf70-4c88-11e8-b3d7-01146121b73d.json  571aaf70-4c88-11e8-b3d7-01146121b73d_attributes.kibanaSavedObjectMeta.searchSourceJSON.json  707665a0-4c8c-11e8-b3d7-01146121b73d.json  707665a0-4c8c-11e8-b3d7-01146121b73d_attributes.visState.json  76e3c090-4c8c-11e8-b3d7-01146121b73d.json  76e3c090-4c8c-11e8-b3d7-01146121b73d_attributes.visState.json  7adfa750-4c81-11e8-b3d7-01146121b73d.json  7adfa750-4c81-11e8-b3d7-01146121b73d_attributes.kibanaSavedObjectMeta.searchSourceJSON.json  7adfa750-4c81-11e8-b3d7-01146121b73d_attributes.panelsJSON.json  Flights_from_Berlin.json  (+24 more)
